Intro section: Fix the text not clipping properly on mobile screens in $medium size

--- a/wp-content/themes/spatovaliyski/assets/src/styles/layouts/_sections.scss
+++ b/wp-content/themes/spatovaliyski/assets/src/styles/layouts/_sections.scss
@@ -59,7 +59,7 @@ $side-padding-mobile: 1em;
 
 			@media (max-width: $breakpoint-medium) {
 				position: absolute;
-				z-index: -1;
+				z-index: -12;
 			}
 		}
 
